--- a/src/style.css
+++ b/src/style.css
@@ -123,7 +123,7 @@ button p {
 .chatContainer {
   height: 100vh;
   width: 30vw;
-  background: #1ba0e6;
+  background: #ffffff;
   color: rgb(0, 0, 0);
   .chatHeader {
     padding: 20px 20px;
@@ -134,6 +134,7 @@ button p {
       padding: 10px 20px;
       border: 1px solid #a7bcff;
       border-radius: 10px;
+      background-color:#F3F3F5;
     }
     h1 {
       margin: 0;
@@ -180,11 +181,12 @@ button p {
   }
 }
 .chatCards:hover {
-  background-color: rgb(91, 148, 168);
+  background-color: #f3f3f5;
+  cursor: pointer;
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 /* Track */
@@ -200,4 +202,135 @@ button p {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+.chatNavbar {
+  padding: 0;
+  height: 20px;
+  width: 70vw;
+}
+.chatNavbar:hover {
+  cursor: pointer;
+}
+.containerChat {
+  display: flex;
+  background: rgb(255, 255, 255);
+
+}
+.navChat {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  gap: 20px;
+  padding: 10px 30px;
+  align-items: center;
+  background: white;
+  border-left: none;
+  border-top: 1px solid #a7bcff;
+  border-right: 1px solid #a7bcff;
+  border-bottom: 1px solid #a7bcff;
+
+
+  position: fixed;
+
+  .navImg {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+  }
+  .navImg img {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+}
+.navText {
+  h3 {
+    margin: 0;
+    padding: 0px;
+  }
+  p {
+    margin: 0;
+    padding: 0;
+  }
+}
+.chatIcon{
+  margin-left: 38vw;
+  display: flex;
+  gap: 20px;
+  cursor: pointer;
+}
+.mainPart{
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10vh;
+  border: 1px solid #a7bcff;
+}
+.chatSection{
+  margin: 0 30px;
+}
+.messageTime{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.imgContainer{
+  img{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+  }
+}
+.chatContent{
+  display: flex;
+  flex-direction: column;
+}
+.messageText{
+  padding: 0px 20px;
+  border-radius: 10px;
+  background-color: #f3f3f5;
+}
+.messageContainer{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.message{
+  border-radius: 20px 20px 20px 0;
+  background-color: #F0F0F0;
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.chatInput{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 30px;
+  gap: 20px;
+  input{
+    padding: 10px 20px;
+    border: 1px solid #a7bcff;
+    border-radius: 10px;
+  }
+  button{
+    padding: 10px 20px;
+    border: 1px solid #a7bcff;
+    border-radius: 10px;
+    background-color: #1ba0e6;
+    color: white;
+    cursor: pointer;
+  }
+}
+.chatInput{
+ height: 50px;
+ width: 70vw;
+ background: red;
+ position: fixed;
+ bottom: 0;
+ margin-bottom: 20px;
+ margin-right: 50px;
 }
